--- a/2022/2022.md
+++ b/2022/2022.md
@@ -1,5 +1,1117 @@
 # 2022 Research Log
 
+## 2022/3/31
+
+Benchmark:
+
+//
+
+## 2022/3/29
+
+Parallelized *kij*:
+
+```c++
+#include <iostream>
+#include <fstream>
+#include <thread>
+#include <vector>
+
+class Matrix {
+    friend class Matrix_kij;
+public:
+    typedef int** matrix_t;
+    typedef int* vector_t;
+protected:
+    matrix_t matrix = nullptr;
+    int column = 0;
+    int row = 0;
+public:
+    ~Matrix() {
+        for (int i = 0; i < row; ++i) {
+            delete [] matrix[i];
+            matrix[i] = nullptr;
+        }
+        delete [] matrix;
+        matrix = nullptr;
+    }
+    Matrix() = default;
+    Matrix(int row, int column, matrix_t matrix) {
+        this->row = row;
+        this->column = column;
+        this->matrix = new vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            this->matrix[i] = new int[column];
+            for (int j = 0; j < column; ++j)
+                this->matrix[i][j] = matrix[i][j];
+        }
+    }
+    Matrix(Matrix &m) {
+        row = m.row;
+        column = m.column;
+        matrix = new vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            matrix[i] = new int[column];
+            for (int j = 0; j < column; ++j)
+                matrix[i][j] = m.matrix[i][j];
+        }
+    }
+    Matrix &operator=(const Matrix &m) {
+        row = m.row;
+        column = m.column;
+        matrix = new vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            matrix[i] = new int[column];
+            for (int j = 0; j < column; ++j)
+                matrix[i][j] = m.matrix[i][j];
+        }
+        return *this;
+    }
+    friend std::ifstream &operator>>(std::ifstream &input, Matrix &m) {
+        input >> m.row;
+        input >> m.column;
+        m.matrix = new vector_t[m.row];
+        for (int i = 0; i < m.row; ++i) {
+            m.matrix[i] = new int[m.column];
+            for (int j = 0; j < m.column; ++j)
+                input >> m.matrix[i][j];
+        }
+        return input;
+    }
+    friend std::ostream &operator<<(std::ostream &output, const Matrix &m) {
+        for (int i = 0; i < m.row; ++i) {
+            for (int j = 0; j < m.column; ++j)
+                std::cout << m.matrix[i][j] << "\t";
+            std::cout << std::endl;
+        }
+        return output;
+    }
+};
+
+class Matrix_kij: protected Matrix {
+private:
+    unsigned long _thread_num = 1;
+    static void _thread(void *m1, void *m2, Matrix::matrix_t tmp, unsigned int count, int start_row, int start_column) {
+        auto *mA = (Matrix_kij*)m1;
+        auto *mB = (Matrix_kij*)m2;
+        int k = start_column;
+        for (int i = start_row; i < mA->row; ++i) {
+            for (; k < mA->column; ++k) {
+                int r = mA->matrix[i][k];
+                for (int j = 0; j < mB->column; ++j)
+                    tmp[i][j] += r * mB->matrix[k][j];
+                if (!(--count))
+                    return;
+            }
+            k = 0;
+        }
+    }
+public:
+    explicit Matrix_kij(Matrix &m) {
+        row = m.row;
+        column = m.column;
+        matrix = new vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            matrix[i] = new int[column];
+            for (int j = 0; j < column; ++j)
+                matrix[i][j] = m.matrix[i][j];
+        }
+    }
+    void set_thread_num(unsigned long threads) {
+        if (threads < std::thread::hardware_concurrency())
+            _thread_num = threads;
+    }
+    Matrix operator*(const Matrix_kij &m) const {
+        Matrix::matrix_t tmp;
+        tmp = new Matrix::vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            tmp[i] = new int[m.column];
+            memset(tmp[i], 0, m.column * sizeof(int));
+        }
+        if (_thread_num == 1)
+            for (int k = 0; k < column; ++k)
+                for (int i = 0; i < row; ++i) {
+                    int r = matrix[i][k];
+                    for (int j = 0; j < m.column; ++j)
+                        tmp[i][j] += r * m.matrix[k][j];
+                }
+        else if (_thread_num > 1) {
+            unsigned int block_size = (row * column) / _thread_num;
+            std::vector<std::thread> threads;
+            for (unsigned long t = 0; t < _thread_num; ++t)
+                threads.emplace_back(std::thread(_thread, (void*)this, (void*)&m, tmp, (t == _thread_num - 1 ? (row * column - block_size * t) : block_size), (block_size * t / row), (block_size * t % row)));
+            for (std::thread &t : threads)
+                t.join();
+        }
+        return {row, m.column, tmp};
+    }
+};
+
+class Timer {
+private:
+    std::chrono::time_point<std::chrono::steady_clock> _start, _end;
+    std::chrono::duration<double> diff{};
+public:
+    Timer() {
+        _start = std::chrono::steady_clock::now();
+        _end = _start;
+        diff = _end - _start;
+    }
+    void start() {
+        _start = std::chrono::steady_clock::now();
+    }
+    void end() {
+        _end = std::chrono::steady_clock::now();
+        diff = _end - _start;
+    }
+    double time() {
+        return diff.count();
+    }
+};
+
+int main() {
+    std::ifstream mA;
+    mA.open("./mA.txt", std::ios::in);
+    std::ifstream mB;
+    mB.open("./mB.txt", std::ios::in);
+    Matrix A, B;
+    mA >> A;
+    mB >> B;
+    mA.close();
+    mB.close();
+    Timer timer;
+    // kij
+    Matrix_kij A_kij(A);
+    Matrix_kij B_kij(B);
+    timer.start();
+    Matrix Result_kij = A_kij * B_kij;
+    timer.end();
+    std::cout << timer.time() << std::endl;
+    // kij - 2
+    A_kij.set_thread_num(2);
+    B_kij.set_thread_num(2);
+    timer.start();
+    Matrix Result_kij_2 = A_kij * B_kij;
+    timer.end();
+    std::cout << timer.time() << std::endl;
+    // kij - 4
+    A_kij.set_thread_num(4);
+    B_kij.set_thread_num(4);
+    timer.start();
+    Matrix Result_kij_4 = A_kij * B_kij;
+    timer.end();
+    std::cout << timer.time() << std::endl;
+    // kij - 8
+    A_kij.set_thread_num(8);
+    B_kij.set_thread_num(8);
+    timer.start();
+    Matrix Result_kij_8 = A_kij * B_kij;
+    timer.end();
+    std::cout << timer.time() << std::endl;
+    // kij - 16
+    A_kij.set_thread_num(16);
+    B_kij.set_thread_num(16);
+    timer.start();
+    Matrix Result_kij_16 = A_kij * B_kij;
+    timer.end();
+    std::cout << timer.time() << std::endl;
+    // kij - 32
+    A_kij.set_thread_num(32);
+    B_kij.set_thread_num(32);
+    timer.start();
+    Matrix Result_kij_32 = A_kij * B_kij;
+    timer.end();
+    std::cout << timer.time() << std::endl;
+    return 0;
+}
+```
+
+* *X* elements per thread:
+
+$$
+X = \begin{cases}
+(Row \times Column) \div NumberOfThreads& \text{not last thread}\\
+Row \times Column - [(Row \times Column) \div NumberOfThreads] \times (NumberOfThreads - 1)& \text{last thread}
+\end{cases}
+$$
+
+## 2022/3/27
+
+Benchmark:
+
+Specs:
+
+```
+Model Name:	Mac Pro
+Model Identifier:	MacPro7,1
+Enclosure:	Tower
+Processor Name:	16-Core Intel Xeon W
+Processor Speed:	3.2 GHz
+Number of Processors:	1
+Total Number of Cores:	16
+L2 Cache (per Core):	1 MB
+L3 Cache:	22 MB
+Hyper-Threading Technology:	Enabled
+Memory:	96 GB
+System Firmware Version:	1731.100.130.0.0 (iBridge: 19.16.14242.0.0,0)
+OS Loader Version:	540.100.7~14
+```
+
+Times:
+
+| **size** | **ijk**     | **kij**    | **jki**     |
+| -------- | ----------- | ---------- | ----------- |
+| **50**   | 0.000303847 | 0.00027725 | 0.000306025 |
+| **100**  | 0.00245108  | 0.00222869 | 0.00258165  |
+| **150**  | 0.00834827  | 0.00738206 | 0.00817197  |
+| **200**  | 0.019842    | 0.0177448  | 0.019953    |
+| **250**  | 0.0380355   | 0.0332996  | 0.0413782   |
+| **300**  | 0.0826602   | 0.057593   | 0.0779464   |
+| **350**  | 0.131497    | 0.0902291  | 0.123746    |
+| **400**  | 0.188632    | 0.137508   | 0.206703    |
+| **450**  | 0.268237    | 0.196668   | 0.309942    |
+| **500**  | 0.393399    | 0.270333   | 0.450042    |
+| **550**  | 0.534819    | 0.355445   | 0.52384     |
+| **600**  | 0.694997    | 0.459113   | 0.683589    |
+| **650**  | 0.8968      | 0.585037   | 0.921857    |
+| **700**  | 1.11802     | 0.727566   | 1.16442     |
+
+Cycles per inner loop iteration:
+$$
+([Times]\div(1\div(3.2\times10^9)))\div[Size]^3
+$$
+
+| **size** | **ijk**          | **kij**          | **jki**          |
+| -------- | ---------------- | ---------------- | ---------------- |
+| **50**   | 7.7784832        | 7.0976           | 7.83424          |
+| **100**  | 7.843456         | 7.131808         | 8.26128          |
+| **150**  | 7.91539674074074 | 6.99928651851852 | 7.74823822222222 |
+| **200**  | 7.9368           | 7.09792          | 7.9812           |
+| **250**  | 7.7896704        | 6.81975808       | 8.47425536       |
+| **300**  | 9.79676444444444 | 6.82583703703704 | 9.23809185185185 |
+| **350**  | 9.81435335276968 | 6.73430017492711 | 9.23585306122449 |
+| **400**  | 9.4316           | 6.8754           | 10.33515         |
+| **450**  | 9.41957091906722 | 6.90631111111111 | 10.8841086419753 |
+| **500**  | 10.0710144       | 6.9205248        | 11.5210752       |
+| **550**  | 10.2865262208866 | 6.83650788880541 | 10.0753598797896 |
+| **600**  | 10.2962518518519 | 6.80167407407407 | 10.1272444444444 |
+| **650**  | 10.4497405553027 | 6.81699918070096 | 10.7417110605371 |
+| **700**  | 10.4305072886297 | 6.78778775510204 | 10.8633935860058 |
+
+**Graph**:
+
+Times:
+
+![2022032701](./pic/2022032701.jpg)
+
+Cycles per inner loop iteration:
+
+![2022032702](./pic/2022032702.jpg)
+
+\[Reference data]:
+
+![2022032703](./pic/2022032703.jpg)
+
+**Conclusion**:
+
+* The experimental data (results) and the reference data have roughly the same trend.
+* The trend of *jki* is not totally same as  reference data, I think it might have something to do with the generated matrix data or the computer specifications.
+
+TODO:
+
+Increase the amount of experimental data.
+
+## 2022/3/26
+
+Program of *ijk*, *kij* and *jki*:
+
+```c++
+#include <iostream>
+#include <fstream>
+
+class Matrix {
+    friend class Matrix_ijk;
+    friend class Matrix_kij;
+    friend class Matrix_jki;
+public:
+    typedef int** matrix_t;
+    typedef int* vector_t;
+protected:
+    matrix_t matrix = nullptr;
+    int column = 0;
+    int row = 0;
+public:
+    ~Matrix() {
+        for (int i = 0; i < row; ++i) {
+            delete [] matrix[i];
+            matrix[i] = nullptr;
+        }
+        delete [] matrix;
+        matrix = nullptr;
+    }
+    Matrix() = default;
+    Matrix(int row, int column, matrix_t matrix) {
+        this->row = row;
+        this->column = column;
+        this->matrix = new vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            this->matrix[i] = new int[column];
+            for (int j = 0; j < column; ++j)
+                this->matrix[i][j] = matrix[i][j];
+        }
+    }
+    Matrix(Matrix &m) {
+        row = m.row;
+        column = m.column;
+        matrix = new vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            matrix[i] = new int[column];
+            for (int j = 0; j < column; ++j)
+                matrix[i][j] = m.matrix[i][j];
+        }
+    }
+    Matrix &operator=(const Matrix &m) {
+        row = m.row;
+        column = m.column;
+        matrix = new vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            matrix[i] = new int[column];
+            for (int j = 0; j < column; ++j)
+                matrix[i][j] = m.matrix[i][j];
+        }
+        return *this;
+    }
+    friend std::ifstream &operator>>(std::ifstream &input, Matrix &m) {
+        input >> m.row;
+        input >> m.column;
+        m.matrix = new vector_t[m.row];
+        for (int i = 0; i < m.row; ++i) {
+            m.matrix[i] = new int[m.column];
+            for (int j = 0; j < m.column; ++j)
+                input >> m.matrix[i][j];
+        }
+        return input;
+    }
+    friend std::ostream &operator<<(std::ostream &output, const Matrix &m) {
+        for (int i = 0; i < m.row; ++i) {
+            for (int j = 0; j < m.column; ++j)
+                std::cout << m.matrix[i][j] << "\t";
+            std::cout << std::endl;
+        }
+        return output;
+    }
+};
+
+class Matrix_ijk: protected Matrix {
+public:
+    explicit Matrix_ijk(Matrix &m) {
+        row = m.row;
+        column = m.column;
+        matrix = new vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            matrix[i] = new int[column];
+            for (int j = 0; j < column; ++j)
+                matrix[i][j] = m.matrix[i][j];
+        }
+    }
+    Matrix operator*(const Matrix_ijk &m) const {
+        Matrix::matrix_t tmp;
+        tmp = new Matrix::vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            tmp[i] = new int[m.column];
+            for (int j = 0; j < m.column; ++j) {
+                int sum = 0;
+                for (int k = 0; k < row; ++k)
+                    sum += matrix[i][k] * m.matrix[k][j];
+                tmp[i][j] = sum;
+            }
+        }
+        return {row, m.column, tmp};
+    }
+};
+
+class Matrix_kij: protected Matrix {
+public:
+    explicit Matrix_kij(Matrix &m) {
+        row = m.row;
+        column = m.column;
+        matrix = new vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            matrix[i] = new int[column];
+            for (int j = 0; j < column; ++j)
+                matrix[i][j] = m.matrix[i][j];
+        }
+    }
+    Matrix operator*(const Matrix_kij &m) const {
+        Matrix::matrix_t tmp;
+        tmp = new Matrix::vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            tmp[i] = new int[m.column];
+            memset(tmp[i], 0, m.column * sizeof(int));
+        }
+        for (int k = 0; k < column; ++k)
+            for (int i = 0; i < row; ++i) {
+                int r = matrix[i][k];
+                for (int j = 0; j < m.column; ++j)
+                    tmp[i][j] += r * m.matrix[k][j];
+            }
+        return {row, m.column, tmp};
+    }
+};
+
+class Matrix_jki: protected Matrix {
+public:
+    explicit Matrix_jki(Matrix &m) {
+        row = m.row;
+        column = m.column;
+        matrix = new vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            matrix[i] = new int[column];
+            for (int j = 0; j < column; ++j)
+                matrix[i][j] = m.matrix[i][j];
+        }
+    }
+    Matrix operator*(const Matrix_jki &m) const {
+        Matrix::matrix_t tmp;
+        tmp = new Matrix::vector_t[row];
+        for (int i = 0; i < row; ++i) {
+            tmp[i] = new int[m.column];
+            memset(tmp[i], 0, m.column * sizeof(int));
+        }
+        for (int j = 0; j < m.column; ++j)
+            for (int k = 0; k < column; ++k) {
+                int r = m.matrix[k][j];
+                for (int i = 0; i < row; ++i)
+                    tmp[i][j] += matrix[i][k] * r;
+            }
+        return {row, m.column, tmp};
+    }
+};
+
+class Timer {
+private:
+    std::chrono::time_point<std::chrono::steady_clock> _start, _end;
+    std::chrono::duration<double> diff{};
+public:
+    Timer() {
+        _start = std::chrono::steady_clock::now();
+        _end = _start;
+        diff = _end - _start;
+    }
+    void start() {
+        _start = std::chrono::steady_clock::now();
+    }
+    void end() {
+        _end = std::chrono::steady_clock::now();
+        diff = _end - _start;
+    }
+    double time() {
+        return diff.count();
+    }
+};
+
+int main() {
+    std::ifstream mA;
+    mA.open("./mA.txt", std::ios::in);
+    std::ifstream mB;
+    mB.open("./mB.txt", std::ios::in);
+    Matrix A, B;
+    mA >> A;
+    mB >> B;
+    mA.close();
+    mB.close();
+    Timer timer;
+    // ijk
+    Matrix_ijk A_ijk(A);
+    Matrix_ijk B_ijk(B);
+    timer.start();
+    Matrix Result_ijk = A_ijk * B_ijk;
+    timer.end();
+    std::cout << timer.time() << std::endl;
+    // kij
+    Matrix_kij A_kij(A);
+    Matrix_kij B_kij(B);
+    timer.start();
+    Matrix Result_kij = A_kij * B_kij;
+    timer.end();
+    std::cout << timer.time() << std::endl;
+    // jki
+    Matrix_jki A_jki(A);
+    Matrix_jki B_jki(B);
+    timer.start();
+    Matrix Result_jki = A_jki * B_jki;
+    timer.end();
+    std::cout << timer.time() << std::endl;
+    return 0;
+}
+```
+
+Use C-Array instead of std::vector.
+
+## 2022/3/24
+
+Matrix Multiplication：
+
+* **ijk**:
+
+  * Multiply mA(N x M) and mB(M x K)
+  * total operations:
+
+  $$
+  O(N^2 \times K)
+  $$
+
+  * K reads per source element in mA and N reads per source element in mB
+  * Miss rate: (set block size to 32B, and type of elements is *double*)
+    * mA: 25%
+    * mB: 100%
+    * mResult: 0
+
+* **kij**:
+
+  * Miss rate:
+    * mA: 0
+    * mB: 25%
+    * mResult: 25%
+
+* **jki**:
+
+  * Miss rate:
+    * mA: 100%
+    * mB: 0
+    * mResult: 100%
+
+## 2022/3/23
+
+Review:
+
+Layout of C Arrays in Memory:
+
+* C arrays allocated in row-major order
+  * each row in contiguous memory locations
+  * a\[i][j] = a[i * N + j] where N is the number of columns
+* Stepping through columns in one row
+  * accesses successive elements
+  * if block size (B) > sizeof(aij) bytes, exploit spatial locality
+    * miss rate = sizeof(aij) / B
+* Stepping through rows in one column
+  * accesses distant elements
+  * no spatial locality
+    * miss rate = 1
+
+## 2022/3/21
+
+https://www.cs.cmu.edu/~213/lectures/10-cache-memories.pdf
+
+https://www.cs.cmu.edu/~213/schedule.html
+
+//
+
+## 2022/3/18
+
+Benchmark results:
+
+//
+
+## 2022/3/14
+
+Doing benchmark on ***parmigiano***.
+
+* `/proc/cpuinfo`: (final processor)
+
+```
+processor       : 31
+vendor_id       : AuthenticAMD
+cpu family      : 23
+model           : 8
+model name      : AMD Ryzen Threadripper 2990WX 32-Core Processor
+stepping        : 2
+microcode       : 0x800820b
+cpu MHz         : 1717.568
+cache size      : 512 KB
+physical id     : 0
+siblings        : 32
+core id         : 11
+cpu cores       : 32
+apicid          : 59
+initial apicid  : 59
+fpu             : yes
+fpu_exception   : yes
+cpuid level     : 13
+wp              : yes
+flags           : fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ht syscall nx mmxext fxsr_opt pdpe1gb rdtscp lm constant_tsc rep_good nopl nonstop_tsc cpuid extd_apicid amd_dcm aperfmperf pni pclmulqdq monitor ssse3 fma cx16 sse4_1 sse4_2 movbe popcnt aes xsave avx f16c rdrand lahf_lm cmp_legacy svm extapic cr8_legacy abm sse4a misalignsse 3dnowprefetch osvw skinit wdt tce topoext perfctr_core perfctr_nb bpext perfctr_llc mwaitx cpb hw_pstate sme ssbd ibpb vmmcall fsgsbase bmi1 avx2 smep bmi2 rdseed adx smap clflushopt sha_ni xsaveopt xsavec xgetbv1 xsaves clzero irperf xsaveerptr arat npt lbrv svm_lock nrip_save tsc_scale vmcb_clean flushbyasid decodeassists pausefilter pfthreshold avic v_vmsave_vmload vgif overflow_recov succor smca
+bugs            : sysret_ss_attrs null_seg spectre_v1 spectre_v2 spec_store_bypass
+bogomips        : 5988.32
+TLB size        : 2560 4K pages
+clflush size    : 64
+cache_alignment : 64
+address sizes   : 43 bits physical, 48 bits virtual
+power management: ts ttp tm hwpstate cpb eff_freq_ro [13] [14]
+```
+
+* `/proc/meminfo`:
+
+```
+MemTotal:       65693892 kB
+MemFree:        54163396 kB
+MemAvailable:   56192440 kB
+Buffers:          137708 kB
+Cached:          2270424 kB
+SwapCached:         9280 kB
+Active:          8279964 kB
+Inactive:        1899792 kB
+Active(anon):    7759152 kB
+Inactive(anon):    11292 kB
+Active(file):     520812 kB
+Inactive(file):  1888500 kB
+Unevictable:           0 kB
+Mlocked:               0 kB
+SwapTotal:       8388604 kB
+SwapFree:        8316644 kB
+Dirty:                 0 kB
+Writeback:             0 kB
+AnonPages:       7770284 kB
+Mapped:            52528 kB
+Shmem:                84 kB
+Slab:             739976 kB
+SReclaimable:     265956 kB
+SUnreclaim:       474020 kB
+KernelStack:        9312 kB
+PageTables:        22956 kB
+NFS_Unstable:          0 kB
+Bounce:                0 kB
+WritebackTmp:          0 kB
+CommitLimit:    41235548 kB
+Committed_AS:    8483852 kB
+VmallocTotal:   34359738367 kB
+VmallocUsed:           0 kB
+VmallocChunk:          0 kB
+HardwareCorrupted:     0 kB
+AnonHugePages:         0 kB
+ShmemHugePages:        0 kB
+ShmemPmdMapped:        0 kB
+CmaTotal:              0 kB
+CmaFree:               0 kB
+HugePages_Total:       0
+HugePages_Free:        0
+HugePages_Rsvd:        0
+HugePages_Surp:        0
+Hugepagesize:       2048 kB
+DirectMap4k:      905664 kB
+DirectMap2M:    26234880 kB
+DirectMap1G:    39845888 kB
+```
+
+## 2022/3/13
+
+Refactored the main function of the matrix multiplication algorithm:
+
+```c++
+int main([[maybe_unused]] int argc, [[maybe_unused]] char *argv[]) {
+    if (argc == 4) {
+        std::ifstream mA;
+        mA.open(argv[1], std::ios::in);
+        std::ifstream mB;
+        mB.open(argv[2], std::ios::in);
+        Timer timer;
+        std::stringstream ss;
+        ss << argv[3];
+        unsigned long thread_num;
+        ss >> thread_num;
+        Matrix A;
+        Matrix B;
+        mA >> A;
+        mB >> B;
+#ifdef DEBUG
+        std::cout << "Matrix A:" << std::endl;
+        std::cout << A;
+        std::cout << "Matrix B:" << std::endl;
+        std::cout << B;
+#endif
+        if (thread_num == 1) {
+            timer.start();
+            Matrix R = A * B;
+            timer.end();
+#ifdef DEBUG
+            std::cout << thread_num << " thread Result:" << std::endl;
+            std::cout << R;
+#endif
+            std::cout << thread_num << " thread Time: " << timer.time() << std::endl;
+        }
+        else if (thread_num > 1) {
+            PMatrix pA = (PMatrix)A;
+            PMatrix pB = (PMatrix)B;
+            pA.set_threads(thread_num);
+            pB.set_threads(thread_num);
+            timer.start();
+            PMatrix pR = pA * pB;
+            timer.end();
+#ifdef DEBUG
+            std::cout << thread_num << " threads Result:" << std::endl;
+            std::cout << pR;
+#endif
+            std::cout << thread_num <<" threads Time: " << timer.time() << std::endl;
+        }
+        mA.close();
+        mB.close();
+    }
+    else if (argc == 2) {
+        if (std::string(argv[1]) == "-h")
+            std::cout << "Hardware threads: " << PMatrix::hardware_threads() << std::endl;
+    }
+    return 0;
+}
+```
+
+Using shell scripts to generate matrixs and make benchmark:
+
+```shell
+#!/bin/bash
+echo "Start..."
+mkdir benchmark
+cp ./matrix_generator ./benchmark/
+cd ./benchmark || exit
+touch generator.log
+for (( i = 100; i < 1000; i = i + 100 )); do
+    echo "Generate $i"
+    mkdir "$i"
+    cd "./$i" || exit
+    ../matrix_generator "mA.txt" "$i" "$i" >> ../generator.log || echo "Error in generate $i mA" >> ../generator.log
+    ../matrix_generator "mB.txt" "$i" "$i" >> ../generator.log || echo "Error in generate $i mB" >> ../generator.log
+    cd ..
+done
+for (( i = 1000; i < 10000; i = i + 1000 )); do
+    echo "Generate $i"
+    mkdir "$i"
+    cd "./$i" || exit
+    ../matrix_generator "mA.txt" "$i" "$i" >> ../generator.log || echo "Error in generate $i mA" >> ../generator.log
+    ../matrix_generator "mB.txt" "$i" "$i" >> ../generator.log || echo "Error in generate $i mB" >> ../generator.log
+    cd ..
+done
+for (( i = 10000; i <= 70000; i = i + 10000 )); do
+    echo "Generate $i"
+    mkdir "$i"
+    cd "./$i" || exit
+    ../matrix_generator "mA.txt" "$i" "$i" >> ../generator.log || echo "Error in generate $i mA" >> ../generator.log
+    ../matrix_generator "mB.txt" "$i" "$i" >> ../generator.log || echo "Error in generate $i mB" >> ../generator.log
+    cd ..
+done
+echo "Generated ALL DONE." >> ./generator.log
+echo "Generated ALL DONE."
+```
+
+```shell
+#!/bin/bash
+echo "Start..."
+cp ./matrix_multiplication ./benchmark/
+cd benchmark || exit
+touch results.log
+./matrix_multiplication "-h" >> ./results.log || echo "Error in get hardware threads" >> ./results.log
+for (( i = 100; i < 1000; i = i + 100 )); do
+    echo "Benchmark $i"
+    echo "Benchmark $i:" >> ./results.log
+    cd "./$i" || exit
+    for (( j = 1; j <= 256; j = j * 2 )); do
+        ../matrix_multiplication "mA.txt" "mB.txt" "$j" >> ../results.log || echo "Error in benchmark $i threads $j" >> ../results.log
+    done
+    cd ..
+done
+for (( i = 1000; i < 10000; i = i + 1000 )); do
+    echo "Benchmark $i"
+    echo "Benchmark $i:" >> ./results.log
+    cd "./$i" || exit
+    for (( j = 1; j <= 256; j = j * 2 )); do
+        ../matrix_multiplication "mA.txt" "mB.txt" "$j" >> ../results.log || echo "Error in benchmark $i threads $j" >> ../results.log
+    done
+    cd ..
+done
+for (( i = 10000; i <= 70000; i = i + 10000 )); do
+    echo "Benchmark $i"
+    echo "Benchmark $i:" >> ./results.log
+    cd "./$i" || exit
+    for (( j = 1; j <= 256; j = j * 2 )); do
+        ../matrix_multiplication "mA.txt" "mB.txt" "$j" >> ../results.log || echo "Error in benchmark $i threads $j" >> ../results.log
+    done
+    cd ..
+done
+echo "Benchmark ALL DONE." >> ./results.log
+echo "Benchmark ALL DONE."
+```
+
+## 2022/3/12
+
+Matrix generation program has low performance, so I made some improvements:
+
+* Using reference to prevent unnecessary copy of varables;
+* Using arguments to generate different matrix
+
+```c++
+#include <iostream>
+#include <vector>
+#include <random>
+#include <fstream>
+#include <sstream>
+
+class Matrix {
+public:
+    typedef std::vector<std::vector<int>> matrix_type;
+    typedef unsigned long rank_type;
+    typedef std::vector<int> vector_type;
+private:
+    [[maybe_unused]] rank_type row, column;
+    matrix_type matrix;
+public:
+    explicit Matrix(matrix_type &m) {
+        row = m.size();
+        column = !row ? 0 : m[0].size();
+        matrix = m;
+    }
+    friend std::ostream &operator<<(std::ostream &output, const Matrix &m) {
+        for (const vector_type &v : m.matrix) {
+            for (int element : v)
+                output << element << " ";
+            output << std::endl;
+        }
+        return output;
+    }
+};
+
+class MatrixGenerator {
+private:
+    int row, column;
+    Matrix *matrix = nullptr;
+public:
+    MatrixGenerator(int _row, int _column): row(_row), column(_column) {
+        std::random_device r;
+        std::default_random_engine e1(r());
+        std::uniform_int_distribution<int> uniform_dist(0, 9);
+        Matrix::matrix_type mv;
+        for (int i = 0; i < row; ++i) {
+            Matrix::vector_type v;
+            for (int j = 0; j < column; ++j)
+                v.push_back(uniform_dist(e1));
+            mv.push_back(v);
+        }
+        matrix = new Matrix(mv);
+    }
+    ~MatrixGenerator() {
+        delete matrix;
+    }
+    void save(const std::string &path) {
+        if (matrix) {
+            std::ofstream file;
+            file.open(path, std::ios::out);
+            file << row << " " << column << std::endl;
+            file << *matrix << std::endl;
+            file.close();
+        }
+    }
+};
+
+int main([[maybe_unused]] int argc, [[maybe_unused]] char * argv[]) {
+    if (argc == 4) {
+        int row, column;
+        std::stringstream ss;
+        ss << argv[2];
+        ss >> row;
+        ss.clear();
+        ss.str("");
+        ss << argv[3];
+        ss >> column;
+        MatrixGenerator mg(row, column);
+        mg.save(std::string(argv[1]));
+        std::cout << "Generate: matrix(" << row << " x " << column << ")" << std::endl;
+    }
+    else {
+        std::cout << "Usage: " << argv[0] << " <file path> <row of matrix> <column of matrix>" << std::endl;
+    }
+    return 0;
+}
+```
+
+The new program can generate 70000 * 70000 matrix on `parmigiano` (64Gbyte memory).
+
+Matrix generation algorithms can also be accelerated by multithreading.
+
+## 2022/3/10
+
+Fix a bug of matrix multiplication program, and change the method for selecting the number of threads:
+
+```c++
+#include <iostream>
+#include <utility>
+#include <vector>
+#include <thread>
+#include <cmath>
+#include <fstream>
+
+//#define DEBUG
+//#define RUN_SINGLE_THREAD
+
+class Matrix {
+private:
+    typedef std::vector<std::vector<int>> matrix_type;
+    typedef unsigned long rank_type;
+    typedef std::vector<int> vector_type;
+    friend class PMatrix;
+    rank_type row, column;
+    matrix_type matrix;
+public:
+    explicit Matrix(matrix_type m) {
+        row = m.size();
+        column = !row ? 0 : m[0].size();
+        matrix = m;
+    }
+    Matrix(): Matrix(matrix_type()) {}
+    friend std::ifstream &operator>>(std::ifstream &input, Matrix &m) {
+        input >> m.row;
+        input >> m.column;
+        for (rank_type r = 0; r < m.row; ++r) {
+            vector_type v;
+            for (rank_type c = 0; c < m.column; ++c) {
+                int t;
+                input >> t;
+                v.push_back(t);
+            }
+            m.matrix.push_back(v);
+        }
+        return input;
+    }
+    friend std::ostream &operator<<(std::ostream &output, const Matrix &m) {
+        for (const vector_type &v : m.matrix) {
+            for (int element : v)
+                output << element << "\t";
+            output << std::endl;
+        }
+        return output;
+    }
+    Matrix operator*(const Matrix &m) const {
+        matrix_type tmp;
+        if (column == m.row) {
+            for (rank_type i = 0; i < row; ++i) {
+                vector_type v;
+                for (rank_type j = 0; j < m.column; ++j) {
+                    int element = 0;
+                    for (rank_type k = 0; k < column; ++k) {
+                        element += matrix[i][k] * m.matrix[k][j];
+                    }
+                    v.push_back(element);
+                }
+                tmp.push_back(v);
+            }
+        }
+        Matrix result(tmp);
+        return result;
+    }
+};
+
+class PMatrix: public Matrix {
+private:
+    static const unsigned long _threads_num = 4;
+    static void _thread(matrix_type &result, PMatrix mA, PMatrix mB, rank_type block, rank_type start_row) {
+        for (rank_type i = start_row; i < start_row + block; ++i) {
+            vector_type v;
+            for (rank_type j = 0; j < mB.column; ++j) {
+                int element = 0;
+                for (rank_type k = 0; k < mA.column; ++k) {
+                    element += mA.matrix[i][k] * mB.matrix[k][j];
+                }
+                v.push_back(element);
+            }
+            result.push_back(v);
+        }
+    }
+public:
+    [[maybe_unused]] explicit PMatrix(const Matrix &m) {
+        row = m.row;
+        column = m.column;
+        matrix = m.matrix;
+    }
+    explicit PMatrix(matrix_type m): Matrix(std::move(m)) {}
+    PMatrix operator*(const PMatrix &m) const {
+        matrix_type tmp;
+        if (column == m.row) {
+            unsigned long threads_num = row > _threads_num ? _threads_num : row;
+            rank_type block = row / threads_num;
+            std::vector<matrix_type> results(threads_num);
+            std::vector<std::thread> threads;
+            for (unsigned long t = 0; t < threads_num; ++t)
+                threads.emplace_back(std::thread(_thread, std::ref(results[t]), *this, m, (t < threads_num - 1 ? block : row - t * block), t * block));
+            for (std::thread &t : threads)
+                t.join();
+            for (matrix_type &r : results)
+                tmp.insert(tmp.end(), r.begin(), r.end());
+        }
+        PMatrix result(tmp);
+        return result;
+    }
+};
+
+class Timer {
+private:
+    std::chrono::time_point<std::chrono::steady_clock> _start, _end;
+    std::chrono::duration<double> diff{};
+public:
+    Timer() {
+        _start = std::chrono::steady_clock::now();
+        _end = _start;
+        diff = _end - _start;
+    }
+    void start() {
+        _start = std::chrono::steady_clock::now();
+    }
+    void end() {
+        _end = std::chrono::steady_clock::now();
+        diff = _end - _start;
+    }
+    double time() {
+        return diff.count();
+    }
+};
+
+int main([[maybe_unused]] int argc, [[maybe_unused]] char *argv[]) {
+    std::ifstream mA;
+    mA.open("./mA.txt", std::ios::in);
+    std::ifstream mB;
+    mB.open("./mB.txt", std::ios::in);
+    Timer timer;
+    Matrix A;
+    Matrix B;
+    mA >> A;
+    mB >> B;
+#ifdef DEBUG
+    std::cout << "Matrix A:" << std::endl;
+    std::cout << A;
+    std::cout << "Matrix B:" << std::endl;
+    std::cout << B;
+#endif
+#ifdef RUN_SINGLE_THREAD
+    timer.start();
+    Matrix R = A * B;
+    timer.end();
+#ifdef DEBUG
+    std::cout << "Result:" << std::endl;
+    std::cout << R;
+#endif
+    std::cout << "Time: " << timer.time() << std::endl;
+#endif
+    PMatrix pA = (PMatrix)A;
+    PMatrix pB = (PMatrix)B;
+    timer.start();
+    PMatrix pR = pA * pB;
+    timer.end();
+#ifdef DEBUG
+    std::cout << "P Result:" << std::endl;
+    std::cout << pR;
+#endif
+    std::cout << "P Time: " << timer.time() << std::endl;
+    return 0;
+}
+```
+
+***Benchmark:*** (parmigiano)
+
+
+
 ## 2022/3/10
 
 Get the number of concurrent threads system supported:
